--- a/css/css.css
+++ b/css/css.css
@@ -1,11 +1,100 @@
-*{
-    margin:0;
-    padding:0;
-    list-style:none;
-}
-.add{
-    float:left;
-    width:10px;
-    min-height:100%;
-    background-color:rgb(29,38,52);
-}
+
+        *{
+            margin:0;
+            padding:0;
+            list-style:none;
+        }
+        .add{
+            float:left;
+            width:70px;
+            min-height:700px;
+            background-color:rgb(29,38,52);
+            text-align:center;
+        }
+        .add img{
+            width:55px;
+            margin-top:5px;
+        }
+        .menu{
+            float:left;
+            width:180px;
+            height:700px;
+            background-color:rgb(35,46,63);
+        }
+        .menu dl{
+            width:170px;
+            margin-left:5px;
+            border-bottom:1px solid white;
+        }
+        .menu dl dt{
+            color:rgb(83,83,83);
+            line-height:4;
+            text-indent:5px;
+            font-size:10px;
+        }
+        .menu dl dd{
+            color:white;
+            line-height:2.5;
+            text-indent:10px;
+            font-size:13px;
+        }
+        .con{
+            float:left;
+            width: calc(100% - 250px);
+        }
+        .con .tit{
+            width:100%;
+            height:60px;
+        }
+        .tit .big{
+            line-height:60px;
+            padding-left:20px;
+        }
+        .tit .user-h{
+            float:right;
+            width:200px;
+            height:60px;
+            vertical-align:center;
+        }
+        .user-h span{
+            display:inline-block;
+            line-height:60px;
+            vertical-align:top;
+        }
+        .s-wrap{
+            width:100%;
+            height:60px;
+        }
+        .search{
+            width:25%;
+            height:60px;
+            border-right:1px solid grey;
+        }
+        .search img{
+            position:relative;
+            top:3px;
+            left:-50px;
+        }
+        .search input{
+            padding:6px;
+            margin:15px 0 0 15px;
+        }
+        .contact{
+            width:25%;
+            border:1px solid red;
+        }
+        .contact-h{
+            margin:5px;
+        }
+        .contact-h img{
+            margin-left:20px;
+        }
+        .contact-h p{
+            padding-bottom:10px;
+        }
+        .contact-name {
+            position: relative;
+            left: 70px;
+            top: -55px;
+            width: 60%;
+        }
