--- a/css/css.css
+++ b/css/css.css
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 *{
     margin:0;
     padding:0;
@@ -18,7 +18,6 @@ body{
 }
     .add img{
     width:45px;
-    margin-top:40px;
 }
     .add-pic{
     position:absolute;
@@ -55,40 +54,14 @@ body{
     text-indent:10px;
     font-size:13px;
 }
-.con{
-    float:left;
-    width: calc(100% - 250px);
-}
-.con .tit{
-    width:100%;
-    height:80px;
-    border-bottom:1px solid rgb(233,232,237);
-}
-.tit .big{
-    line-height:80px;
-    padding-left:20px;
-}
-.tit .user-h{
-    float:right;
-    width:200px;
-    height:80px;
-    vertical-align:top;
-}
-.user-h img{
-    padding:16px 0;
-}
-.user-con{
-    float:right;
-    width:100px;
-    height:80px;
-    padding:14px 30px 0 0;
-}
+
 .s-wrap{
     width:100%;
     height:60px;
 }
 .search{
     width:25%;
+    min-width:250px;
     height:60px;
     border-right:1px solid rgb(233,232,237);
 }
@@ -101,10 +74,6 @@ body{
     width:80%;
     padding:6px;
     margin:15px 0 0 15px;
-}
-.contact{
-    width:25%;
-
 }
 .contact-h{
     border:1px solid rgb(233,233,233);
@@ -124,69 +93,37 @@ body{
     top: -55px;
     width: 60%;
 }
-=======
 
-        *{
-            margin:0;
-            padding:0;
-            list-style:none;
-        }
-        .add{
-            float:left;
-            width:70px;
-            min-height:700px;
-            background-color:rgb(29,38,52);
-            text-align:center;
-        }
-        .add img{
-            width:55px;
-            margin-top:5px;
-        }
-        .menu{
-            float:left;
-            width:180px;
-            height:700px;
-            background-color:rgb(35,46,63);
-        }
-        .menu dl{
-            width:170px;
-            margin-left:5px;
-            border-bottom:1px solid white;
-        }
-        .menu dl dt{
-            color:rgb(83,83,83);
-            line-height:4;
-            text-indent:5px;
-            font-size:10px;
-        }
-        .menu dl dd{
-            color:white;
-            line-height:2.5;
-            text-indent:10px;
-            font-size:13px;
-        }
         .con{
             float:left;
             width: calc(100% - 250px);
         }
-        .con .tit{
+        .tit{
             width:100%;
             height:60px;
+            border-bottom:1px solid grey;
         }
-        .tit .big{
+       .big{
             line-height:60px;
             padding-left:20px;
         }
-        .tit .user-h{
-            float:right;
-            width:200px;
-            height:60px;
-            vertical-align:center;
+         .user-h{
+             position:absolute;
+             right:0;
+             top:0;
+             width:200px;
+             height:60px;
+
         }
-        .user-h span{
-            display:inline-block;
-            line-height:60px;
-            vertical-align:top;
+         .user-h img{
+             padding:6px 0;
+         }
+        .user-con{
+            position:absolute;
+            top:0;
+            width:100px;
+            height:60px;
+            padding-left:60px;
         }
         .s-wrap{
             width:100%;
@@ -208,21 +145,26 @@ body{
         }
         .contact{
             width:25%;
-            border:1px solid red;
+            height:100%;
+            min-width:250px;
+            border-right:1px solid grey;
         }
-        .contact-h{
-            margin:5px;
+        .each-contact{
+            width:100%;
+            height:150px;
+            border-top:1px solid darkgrey;
         }
-        .contact-h img{
-            margin-left:20px;
+        .each-contact img{
+            margin:6px 10px;
         }
-        .contact-h p{
-            padding-bottom:10px;
+        .contact-info{
+            float:right;
+            width:170px;
+            padding-top:8px;
+            text-align:left;
         }
-        .contact-name {
-            position: relative;
-            left: 70px;
-            top: -55px;
-            width: 60%;
+        .each-contact p{
+            width:250px;
+            word-wrap:break-word;
+            padding:10px;
         }
->>>>>>> d26cd3f832fc7caec4b4001590d4f8b85aa75abd
