--- a/css/css.css
+++ b/css/css.css
@@ -59,7 +59,43 @@ body{
     width:100%;
     height:60px;
 }
+.detail{
+    float:left;
+    width:73%;
+    min-width:300px;
+    height:60px;
+    border-bottom:1px solid rgb(232,232,232);
+}
+.d-name{
+    padding-left:15px;
+    line-height:60px;
+}
+.d-name:after{
+    display:inline-block;
+    margin-left:5px;
+    content:"";
+    width:15px;
+    height:15px;
+    border-radius:50%;
+    background-color:red;
+}
+.d-button{
+    float:right;
+    width:300px;
+    height:60px;
+    line-height:60px;
+}
+.d-button button{
+    width:40px;
+    height:28px;
+    vertical-align:middle;
+}
+.d-button button img{
+    width:30px;
+    height:24px;
+}
 .search{
+    float:left;
     width:25%;
     min-width:250px;
     height:60px;
@@ -144,6 +180,7 @@ body{
             margin:15px 0 0 15px;
         }
         .contact{
+            float:left;
             width:25%;
             height:100%;
             min-width:250px;
@@ -167,4 +204,33 @@ body{
             width:250px;
             word-wrap:break-word;
             padding:10px;
+        }
+        .message{
+            width:800px;
+            height:100%;;
+            float:left;
+        }
+        .m-box{
+            width:100%;
+            height:100%;
+            border-bottom:1px solid grey;
+        }
+        .m-box img{
+            float:left;
+            margin:15px;
+        }
+        .m-dialog{
+            float:left;
+            width:700px;
+            height:100%;
+        }
+        .m-dialog span{
+            line-height:60px;
+        }
+        .m-dialog{
+            word-wrap:break-word
+        }
+        .test{
+            width:80px;
+            float:left;
         }
